# service-fabric-apps-rs

./: CMakeLists.txt  Cargo.toml  README.md  global.json
.github/workflows/: build.yaml  ci.yaml  generate.yaml
.metadata/: emitter.settings.rsp  generate.proj
.windows/winmd/: Microsoft.ServiceFabric.ReliableCollectionRuntime.winmd
container/: CMakeLists.txt  ClusterManifestTemplate.json  Dockerfile  entrypoint.ps1
crates/libs/c/: Cargo.toml  build.rs
crates/libs/c/src/: FabricCommon.rs  ReliableCollectionRuntime.rs  lib.rs
crates/libs/core/: Cargo.toml
crates/libs/core/src/: wrap.rs
crates/libs/mssf-ext/: Cargo.toml
crates/libs/mssf-ext/src/: client.rs  data.rs  lib.rs  operation.rs  state_provider.rs  state_replicator.rs  stream.rs  traits.rs  types.rs
crates/libs/mssf-rplctr/: Cargo.toml  build.rs
crates/libs/mssf-rplctr/proto/: rplctr.proto
crates/libs/mssf-rplctr/src/: lib.rs  rpc.rs  rplctr.rs  rplctr_inner.rs  state_rplctr.rs
crates/samples/: CMakeLists.txt
crates/samples/cpp/: CMakeLists.txt  Cargo.toml  FabricStrings.idl  main.cpp
crates/samples/cpp/.metadata/: generate.proj
crates/samples/cpp/.metadata/Partitions/FabricStrings/: main.cpp  settings.rsp
crates/samples/cpp/.windows/winmd/: Microsoft.ServiceFabric.FabricStrings.winmd
crates/samples/cpp/src/: FabricCommon.rs  FabricStrings.rs  lib.rs
crates/samples/cpp/tools_api/: gen.rs
crates/samples/cpp_tools_api/: Cargo.toml
crates/samples/cpp_tools_api/src/: main.rs
crates/samples/kvmap/: CMakeLists.txt  Cargo.toml  build.rs
crates/samples/kvmap/src/: app.rs  data.rs  kvmap.rs  main.rs  test.rs
crates/samples/kvstore/: CMakeLists.txt  Cargo.toml
crates/samples/kvstore/src/: kvstore.rs  main.rs
crates/samples/rcstore/: CMakeLists.txt  Cargo.toml  build.rs
crates/samples/rcstore/rccli/: main.rs
crates/samples/rcstore/src/: main.rs  rcstore.rs  utils.rs
crates/tools/api/src/: main.rs
include/: Internal.h
