[workspace]
resolver = "2"
members = [
  "crates/tools/*",
  "crates/libs/*",
  "crates/samples/*"
]

[workspace.dependencies]
mssf-ext = {path = "./crates/libs/mssf-ext"}
mssf-com = {version = "0.0.17"}
mssf-core = "0.0.17"
windows-bindgen = "0.58"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3",  default-features = false, features = ["fmt"]}
trait-variant = "0.1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde_json = "1"
serde = {version = "1", features = ["derive"]}
lazy_static = "1"
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
prost-build = "0.13"
clap = { version = "4", features = ["derive"] }

# treat pal as the windows core.
# see mssf-pal documentation why it is used this way.
[workspace.dependencies.windows-core]
package = "mssf-pal"
version = "0.0.17"

# testing code not released in crates yet
# [patch.crates-io]
# mssf-core = {git = "https://github.com/youyuanwu/service-fabric-rs-fork.git", rev = "5e1956448830333f09ccb2717534219843a2903f"}
# mssf-com = {git = "https://github.com/youyuanwu/service-fabric-rs-fork.git", rev = "5e1956448830333f09ccb2717534219843a2903f"}