[workspace]
resolver = "2"
members = [
  "crates/tools/*",
  "crates/libs/*",
  "crates/samples/*"
]

[workspace.dependencies]
mssf-ext = { path = "./crates/libs/mssf-ext"}
mssf-com = { version = "0.5" }
mssf-core = "0.6"
mssf-pal = "0.5"
mssf-util = "0.6"
windows-bindgen = "0.66"
windows-link = "0.2"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3",  default-features = false, features = ["fmt"]}
trait-variant = "0.1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde_json = "1"
serde = {version = "1", features = ["derive"]}
lazy_static = "1"
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
clap = { version = "4", features = ["derive"] }

# testing code not released in crates yet
# [patch.crates-io]
# mssf-core = {git = "https://github.com/youyuanwu/service-fabric-rs-fork.git", rev = "f664423fd9f1818cbd400aa34617e73d49fb7ff6"}
# mssf-com = {git = "https://github.com/youyuanwu/service-fabric-rs-fork.git", rev = "f664423fd9f1818cbd400aa34617e73d49fb7ff6"}
# mssf-pal = {git = "https://github.com/youyuanwu/service-fabric-rs-fork.git", rev = "f664423fd9f1818cbd400aa34617e73d49fb7ff6"}