[package]
name = "sfrc-c"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
mssf-com ={workspace = true, features = ["ServiceFabric_FabricCommon"]}
windows-targets.workspace = true
windows-link.workspace = true

# hack to use mssf-pal and expose it internally
[dependencies.extern-windows-core]
package = "mssf-pal"
version = "0.0.20"
