[package]
name = "mssf-ext"
version = "0.1.0"
edition = "2021"

[dependencies]
mssf-core.workspace = true
mssf-com.workspace = true
mssf-pal.workspace = true
trait-variant.workspace = true
bytes.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
mssf-util.workspace = true