[package]
name = "mssf-rplctr"
version = "0.1.0"
edition = "2021"

[dependencies]
mssf-core.workspace = true
mssf-ext.workspace = true
bytes.workspace = true
tonic.workspace = true
prost.workspace = true
tokio-util.workspace = true
tokio.workspace = true

[build-dependencies]
tonic-build.workspace = true
prost-build.workspace = true

[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true