[package]
name = "mssf-rplctr"
version = "0.1.0"
edition = "2021"

[dependencies]
mssf-core.workspace = true
mssf-ext.workspace = true
mssf-util.workspace = true
bytes.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
tokio.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true