[package]
name = "cpp"
version = "0.1.0"
edition = "2021"

# compiles to static lib for cpp to link to
[lib]
crate-type = ["dylib"]

[dependencies]
mssf-com.workspace = true
mssf-core.workspace = true
mssf-pal.workspace = true
mssf-util.workspace = true
tokio.workspace = true
lazy_static.workspace = true